Hamburger menu working; bug in the z-index

--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,7 @@ header{
     --max-width: 1170px;
     display: flex;
     flex-direction: column;
+    
 
     & .info{
         display: flex;
@@ -29,9 +30,16 @@ header{
         }
     }
     & nav{
+        display: grid;
+        grid-template-columns: min-content 1fr min-content;
+        grid-template-areas: ". . downloadBTN";
+        padding: 5px;
+        align-items: center;
         background-color: var(--white);
         border-radius: 5px;
         position: relative;
+        text-transform: uppercase;
+        font: var(--text-h6);
 
         & a img[src*=Logo]{
             padding: 32px 16px;
@@ -45,9 +53,9 @@ header{
 
         & ul{
             display: grid;
-            & li{
-                text-transform: uppercase;
-                font: var(--text-h6);
+            z-index: 99;
+            & > *{
+                z-index: inherit;
             }
         }
 
@@ -58,6 +66,37 @@ header{
             background-size: cover;
             width: 24px;
             height: 24px;
+        }
+        & .BG-azul{
+            text-transform: inherit;
+            grid-area: downloadBTN;
+        }
+    }
+}
+
+
+.menu-hamburger{
+    box-sizing: content-box;
+    background-color: transparent;
+    border-radius: 50%;
+    z-index: 9;
+
+    cursor: pointer;
+}
+.links-active{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    border-radius: 5px;
+    left: 0;
+    top: 55px;
+    background-color: white;
+    z-index: 7;
+    & li{
+        display: block;
+        z-index: inherit;
+        &.empty{
+            display: none;
         }
     }
 }
@@ -70,7 +109,6 @@ header{
         gap: 16px;
         
         & nav{ /* Remover menu hamburger */
-            padding: 15px 5px 15px 30px;
             & .menu-hamburger{
                 display: none;
             }
@@ -79,6 +117,7 @@ header{
                 top: calc(-50% + 8px);
             }
             & ul{
+                padding-inline-start: 30px;
                 grid-template-columns: min-content min-content min-content 1fr min-content min-content min-content;
                 gap: 40px;
             }
@@ -95,13 +134,13 @@ header{
 
         /* Falta adicionar a lista de botões quando clicado */
         & nav{
-            padding: 15px 5px 15px 30px;
-            
+            padding: 5px;
             & .menu-hamburger{ /* Menu hamburger */
+                border: 10px solid transparent;
                 display: block;
                 position: absolute;
-                left: 18px;
-                top: 15px;
+                left: 10px;
+                top: 7px;
             }
             /* Fazendo os outros elementos desaparecer */
             & ul {
@@ -109,11 +148,13 @@ header{
                 gap: 0;
                 & li{
                 display: none;
-                &:last-child{
-                    display: block;
-                    grid-column: -1;
-                    }
                 }
+            }
+            & .links-active{
+                width: max(240px, 20vw);
+                height: min-content;
+                padding: 22px 89px 20px 40px;
+                gap: 25px;
             }
         }
     }
@@ -123,7 +164,8 @@ header{
 
 @media (max-width: 767px) {
     .BG-azul{
-        padding: 12px 6px;
+        display: block;
+        padding: 4px 6px;
         font-size: 10px;
     }
     header{
@@ -134,6 +176,7 @@ header{
         }
         /* Menu hamburger / Ajustes na Logo */
         & nav{
+            padding: 3px;
             & ul{
                 gap: 0px;
             }
@@ -142,11 +185,17 @@ header{
                 padding: 24px 10px;
                 top: calc(-50% + 11px);
             }
-            padding: 5px 3px 7px 10px;
             & .menu-hamburger{
-                top: 8px;
-                left: 9px;
+                top: -2px;
+                left: 3px;
             }
+        }
+        & .links-active.links-active{
+            top: 35px;
+            width: min-content;
+            padding: 20px 25px;
+            gap: 15px;
+            z-index: 99;
         }
     }
 }
